--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Student website</title>
+    <title>Student Website</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -19,96 +19,103 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-expand-md nav-fill w-100">
-        <div class="container-fluid">
-          <div class="d-flex justify-content-center align-items-center w-100">
-            <button
-              class="btn d-md-none"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasMenu"
-              aria-controls="offcanvasMenu"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <a
-              class="navbar-brand mx-0 flex-grow-1 text-center text-md-start"
-              href="#"
-              ><u>STUDY LINK</u></a
-            >
-          </div>
-          <div
-            class="offcanvas offcanvas-start"
-            tabindex="-1"
-            id="offcanvasMenu"
-          >
+    <div class="main-container">
+      <header>
+        <nav
+          class="navbar navbar-expand-md nav-fill w-100"
+          style="height: 88px"
+        >
+          <div class="container-fluid">
+            <div class="d-flex align-items-center w-100">
+              <button
+                class="btn d-md-none"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasMenu"
+                aria-controls="offcanvasMenu"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a
+                class="navbar-brand mx-0 flex-grow-1 text-center text-md-start fs-5 fs-md-3 logo-text"
+                href="#"
+                ><u>STUDY LINK</u></a
+              >
+            </div>
             <div
-              class="ms-md-auto d-flex flex-column flex-md-row  align-items-center gap-0 gap-md-3 pt-3 pt-md-0"
+              class="offcanvas offcanvas-start nav-right-menu"
+              tabindex="-1"
+              id="offcanvasMenu"
             >
-              <div class="order-1 order-md-0 w-100">
-                <ul class="navbar-nav mt-2 mt-md-0 align-items-md-center">
-                  <div class="divider-nav-menu d-none d-md-inline"></div>
-                  <li class="nav-item">
-                    <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
-                      >Home</a
-                    >
-                  </li>
-                  <div class="divider-nav-menu"></div>
-                  <li class="nav-item">
-                    <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
-                      >Document</a
-                    >
-                  </li>
-                  <div class="divider-nav-menu"></div>
-                  <li class="nav-item">
-                    <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
-                      >Settings</a
-                    >
-                  </li>
-                  <div class="divider-nav-menu"></div>
-                  <li class="nav-item">
-                    <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
-                      >Info</a
-                    >
-                  </li>
-                  <div class="divider-nav-menu"></div>
-                  <li class="nav-item">
-                    <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
-                      >About</a
-                    >
-                  </li>
-                  <div class="divider-nav-menu d-inline d-md-none"></div>
-                </ul>
-              </div>
-              <div class="d-flex gap-3 order-0 order-md-1 w-100 px-4 px-md-0">
-                <button
-                  type="button"
-                  class="rounded-pill border border-primary bg-white text-primary flex-grow-1"
-                  style="padding-left: 24px; padding-right: 24px"
-                >
-                  Login
-                </button>
-                <button
-                  type="button"
-                  class="btn rounded-pill bg-primary text-white flex-grow-1"
-                  style="padding-left: 24px; padding-right: 24px"
-                >
-                  Register
-                </button>
+              <div
+                class="ms-md-auto d-flex flex-column flex-md-row align-items-center gap-0 gap-md-3 gap-xl-5 pt-3 pt-md-0"
+              >
+                <div class="order-1 order-md-0 w-100">
+                  <ul class="navbar-nav mt-2 mt-md-0 align-items-md-center">
+                    <div
+                      class="divider-nav-menu d-none d-md-inline mx-md-2 mx-lg-3 mx-xl-4"
+                    ></div>
+                    <li class="nav-item">
+                      <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
+                        >Home</a
+                      >
+                    </li>
+                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <li class="nav-item">
+                      <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
+                        >Document</a
+                      >
+                    </li>
+                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <li class="nav-item">
+                      <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
+                        >Settings</a
+                      >
+                    </li>
+                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <li class="nav-item">
+                      <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
+                        >Info</a
+                      >
+                    </li>
+                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <li class="nav-item">
+                      <a class="nav-link text-start ps-4 ps-md-0 pe-0" href="#"
+                        >About</a
+                      >
+                    </li>
+                    <div class="divider-nav-menu d-inline d-md-none"></div>
+                  </ul>
+                </div>
+                <div class="d-flex gap-2 gap-xl-3 order-0 order-md-1 w-100 px-4 px-md-0">
+                  <button
+                    type="button"
+                    class="rounded-pill border border-2 border-primary bg-white text-primary flex-grow-1"
+                    style="padding-left: 24px; padding-right: 24px"
+                  >
+                    Login
+                  </button>
+                  <button
+                    type="button"
+                    class="btn rounded-pill bg-primary text-white flex-grow-1"
+                    style="padding-left: 24px; padding-right: 24px"
+                  >
+                    Register
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </nav>
-      <hr class="solid my-0" />
-    </header>
-    <main></main>
-    <footer>
-      <!-- place footer here -->
-    </footer>
+        </nav>
+        <hr class="solid my-0" />
+      </header>
+      <main></main>
+      <footer>
+        <!-- place footer here -->
+      </footer>
+    </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
