Add banner and footer container

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 href="#"
                 ><u>STUDY LINK</u></a
               >
+              <button class="btn invisible">
+                <span class="navbar-toggler-icon"></span>
+              </button>
             </div>
             <div
               class="offcanvas offcanvas-start nav-right-menu"
@@ -89,7 +92,9 @@
                     <div class="divider-nav-menu d-inline d-md-none"></div>
                   </ul>
                 </div>
-                <div class="d-flex gap-2 gap-xl-3 order-0 order-md-1 w-100 px-4 px-md-0">
+                <div
+                  class="d-flex gap-2 gap-xl-3 order-0 order-md-1 w-100 px-4 px-md-0"
+                >
                   <button
                     type="button"
                     class="rounded-pill border border-2 border-primary bg-white text-primary flex-grow-1"
@@ -111,9 +116,11 @@
         </nav>
         <hr class="solid my-0" />
       </header>
-      <main></main>
+      <main class="full-height-container">
+        <div class="content">AAA</div>
+      </main>
       <footer>
-        <!-- place footer here -->
+        <div class="bg-primary" style="height: 350px">AA</div>
       </footer>
     </div>
     <!-- Bootstrap JavaScript Libraries -->
