--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <div class="main-container">
       <header>
+        <!-- Naviagtion Bar -->
         <nav
           class="navbar navbar-expand-md nav-fill w-100"
           style="height: 88px"
@@ -116,10 +117,44 @@
         </nav>
         <hr class="solid my-0" />
       </header>
-      <main class="full-height-container">
-        <div class="content">AAA</div>
+
+      <main>
+        <!-- Banner -->
+        <div class="full-height-container">
+          <div class="content position-relative">
+            <div
+              class="position-absolute w-50 bottom-0 end-0 d-none d-md-inline"
+              style="background-color: #f5f5f5; height: 70%"
+            ></div>
+            <img
+              src="https://fastly.picsum.photos/id/866/1920/1080.jpg?hmac=dNBuPEp10RySTqlc5EpGw7QyrFIpBd2X88r1Ixla7pw"
+              alt=""
+              class="position-absolute top-0 start-0"
+              style="width: 85%; height: 95%; object-fit: cover"
+            />
+
+            <div
+              class="position-absolute bottom-0 end-0 d-flex align-items-center banner-text-content"
+            >
+              <div class="d-flex flex-column p-5">
+                <p class="text-warning mb-4 banner-text-content-title">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                </p>
+                <p class="text-white mb-0 banner-text-content-value">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+                <p class="text-white mb-0 banner-text-content-value">
+                  Aliquid, molestiae tempora rerum dicta magnam molestias magni
+                  blanditiis at ea repudiandae qui libero rem similique, in
+                  natus expedita officia neque non?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
+        <!-- Footer -->
         <div class="bg-primary" style="height: 350px">AA</div>
       </footer>
     </div>
