--- a/index.html
+++ b/index.html
@@ -129,14 +129,15 @@
             <img
               src="https://fastly.picsum.photos/id/866/1920/1080.jpg?hmac=dNBuPEp10RySTqlc5EpGw7QyrFIpBd2X88r1Ixla7pw"
               alt=""
-              class="position-absolute top-0 start-0"
-              style="width: 85%; height: 95%; object-fit: cover"
+              class="position-absolute top-0 start-0 banner-image"
             />
 
             <div
               class="position-absolute bottom-0 end-0 d-flex align-items-center banner-text-content"
             >
-              <div class="d-flex flex-column p-5">
+              <div
+                class="d-flex flex-column px-md-5 justify-content-center h-100 banner-text-background"
+              >
                 <p class="text-warning mb-4 banner-text-content-title">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 </p>
