Add course list

--- a/index.html
+++ b/index.html
@@ -120,78 +120,75 @@
 
       <main style="display: flex; flex-direction: column">
         <!-- Banner -->
-        <div class="full-height-container">
-          <div class="content position-relative">
-            <div
-              class="position-absolute w-50 bottom-0 end-0 d-none d-md-inline"
-              style="background-color: #f5f5f5; height: 70%"
-            ></div>
-            <img
-              src="https://fastly.picsum.photos/id/866/1920/1080.jpg?hmac=dNBuPEp10RySTqlc5EpGw7QyrFIpBd2X88r1Ixla7pw"
-              alt=""
-              class="position-absolute top-0 start-0 banner-image"
-            />
+        <div class="position-relative">
+          <div
+            class="position-absolute w-50 bottom-0 end-0 d-none d-md-inline"
+            style="background-color: #f5f5f5; height: 70%"
+          ></div>
+          <div class="full-height-container">
+            <div class="content position-relative">
+              <img
+                src="https://fastly.picsum.photos/id/866/1920/1080.jpg?hmac=dNBuPEp10RySTqlc5EpGw7QyrFIpBd2X88r1Ixla7pw"
+                alt=""
+                class="position-absolute top-0 start-0 banner-image"
+              />
 
-            <div
-              class="position-absolute bottom-0 end-0 d-flex align-items-center banner-text-content"
-            >
               <div
-                class="d-flex flex-column px-md-5 justify-content-center h-100 banner-text-background"
+                class="position-absolute bottom-0 end-0 d-flex align-items-center banner-text-content"
               >
-                <p class="text-warning mb-4 banner-text-content-title">
-                  Eラーニング講座提供サービス
-                </p>
-                <p class="text-white mb-0 banner-text-content-value">
-                  これまでに150,000人以上が受請したeラーニング講座です。基本的なマナー講座から
-                </p>
-                <p class="text-white mb-0 banner-text-content-value">
-                  Microsoft Office
-                  Specialistの資格認定講座、簿記・宅建などの各種資格対策講座を多数ご用意しております。
-                </p>
+                <div
+                  class="d-flex flex-column px-md-5 justify-content-center h-100 banner-text-background"
+                >
+                  <p class="text-warning mb-4 banner-text-content-title">
+                    Eラーニング講座提供サービス
+                  </p>
+                  <p class="text-white mb-0 banner-text-content-value">
+                    これまでに150,000人以上が受請したeラーニング講座です。基本的なマナー講座から
+                  </p>
+                  <p class="text-white mb-0 banner-text-content-value">
+                    Microsoft Office
+                    Specialistの資格認定講座、簿記・宅建などの各種資格対策講座を多数ご用意しております。
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-
-        <!-- <div class="">
-          <div class="w-100" style="padding: 0 200px">
+          <div class="w-100 position-relative course-list">
             <div class="d-flex flex-column">
-              <p style="font-size: large; font-weight: 600">
-                Seach course E-Learning
+              <p style="font-size: x-large; font-weight: 600">
+                E- ラーニング講座を探す
               </p>
               <div class="d-flex flex-row">
-                <div class="bg-warning" style="width: 3px"></div>
-                <div class="container">
-                  <div class="row">
-                    <div class="col-4">エネルギー・環境問題 (10)</div>
-                    <div class="col-4">AI・データサイエンス (10)</div>
-                    <div class="col-4">VR・プログラミング・ゲーム (10)</div>
+                <div
+                  class="bg-warning"
+                  style="width: 3px; margin-right: 24px"
+                ></div>
+                <div class="grid-container">
+                  <div class="grid-item">
+                    <p class="grid-item-active">エネルギー・環境問題 (10)</p>
                   </div>
-                  <div class="row">
-                    <div class="col-4">
-                      まちづくり・スマートシティ・防災 (10)
-                    </div>
-                    <div class="col-4">EV・自動運転 (10)</div>
-                    <div class="col-4">自然・地球・数理 (10)</div>
+                  <div class="grid-item">AI・データサイエンス (10)</div>
+                  <div class="grid-item">VR・プログラミング・ゲーム (10)</div>
+                  <div class="grid-item">
+                    まちづくり・スマートシティ・防災 (10)
                   </div>
-                  <div class="row">
-                    <div class="col-4">
-                      ライフサイエンス・創薬・コスメティクス (10)
-                    </div>
-                    <div class="col-4">脳・感性・アート (10)</div>
-                    <div class="col-4">ものづくり・デザイン (10)</div>
+                  <div class="grid-item">EV・自動運転 (10)</div>
+                  <div class="grid-item">EV・自動運転 (10)</div>
+                  <div class="grid-item">自然・地球・数理 (10)</div>
+                  <div class="grid-item">
+                    ライフサイエンス・創薬・コスメティクス (10)
                   </div>
-                  <div class="row">
-                    <div class="col-4">ロボット (10)</div>
-                    <div class="col-4">ヘルスケア・スポーツ (10)</div>
-                    <div class="col-4">マテリアル (10)</div>
-                  </div>
+                  <div class="grid-item">脳・感性・アート (10)</div>
+                  <div class="grid-item">ものづくり・デザイン (10)</div>
+                  <div class="grid-item">ロボット (10)</div>
+                  <div class="grid-item">マテリアル (10)</div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="bg-warning" style="height: 350px">AA</div> -->
+
+        <div class="bg-warning" style="height: 350px">AA</div>
       </main>
       <footer>
         <!-- Footer -->
