Add course list

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     />
 
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="js/script.js" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
     <!-- Bootstrap CSS-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -158,7 +164,7 @@
               <p style="font-size: x-large; font-weight: 600">
                 E- ラーニング講座を探す
               </p>
-              <div class="d-flex flex-row">
+              <div class="d-flex flex-row mt-4">
                 <div
                   class="bg-warning"
                   style="width: 3px; margin-right: 24px"
@@ -188,7 +194,139 @@
           </div>
         </div>
 
-        <div class="bg-warning" style="height: 350px">AA</div>
+        <div class="d-flex flex-column popular-course gap-5">
+          <div
+            class="d-flex flex-row justify-content-between popular-course-title"
+          >
+            <h2>JeLSの人気講座</h2>
+            <div class="d-flex flex-row gap-3">
+              <button class="button left">&#8592;</button>
+              <button class="button right">&#8594;</button>
+            </div>
+          </div>
+          <div id="scroll-container" class="horizontal-scroll-container">
+            <div class="item">
+              <img
+                class="thumbnail"
+                src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                alt=""
+              />
+              <p class="title">講義プログラム名</p>
+              <button class="category">まちづくり・スマートシティ・防災</button>
+              <div class="info-container">
+                <div class="info-item">
+                  <i class="fas fa-clock icon"></i>
+                  <span style="font-size: 12px">3 時間</span>
+                </div>
+                <div class="info-item">
+                  <i class="fas fa-tv icon"></i>
+                  <span style="font-size: 12px">8 レ講義</span>
+                </div>
+              </div>
+              <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+              <p class="content">
+                子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+              </p>
+              <a href="#" class="more">もっと見る</a>
+            </div>
+            <div class="item">
+              <img
+                class="thumbnail"
+                src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                alt=""
+              />
+              <p class="title">講義プログラム名</p>
+              <button class="category">まちづくり・スマートシティ・防災</button>
+              <div class="info-container">
+                <div class="info-item">
+                  <i class="fas fa-clock icon"></i>
+                  <span style="font-size: 12px">3 時間</span>
+                </div>
+                <div class="info-item">
+                  <i class="fas fa-tv icon"></i>
+                  <span style="font-size: 12px">8 レ講義</span>
+                </div>
+              </div>
+              <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+              <p class="content">
+                子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+              </p>
+              <a href="#" class="more">もっと見る</a>
+            </div>
+            <div class="item">
+              <img
+                class="thumbnail"
+                src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                alt=""
+              />
+              <p class="title">講義プログラム名</p>
+              <button class="category">まちづくり・スマートシティ・防災</button>
+              <div class="info-container">
+                <div class="info-item">
+                  <i class="fas fa-clock icon"></i>
+                  <span style="font-size: 12px">3 時間</span>
+                </div>
+                <div class="info-item">
+                  <i class="fas fa-tv icon"></i>
+                  <span style="font-size: 12px">8 レ講義</span>
+                </div>
+              </div>
+              <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+              <p class="content">
+                子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+              </p>
+              <a href="#" class="more">もっと見る</a>
+            </div>
+            <div class="item">
+              <img
+                class="thumbnail"
+                src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                alt=""
+              />
+              <p class="title">講義プログラム名</p>
+              <button class="category">まちづくり・スマートシティ・防災</button>
+              <div class="info-container">
+                <div class="info-item">
+                  <i class="fas fa-clock icon"></i>
+                  <span style="font-size: 12px">3 時間</span>
+                </div>
+                <div class="info-item">
+                  <i class="fas fa-tv icon"></i>
+                  <span style="font-size: 12px">8 レ講義</span>
+                </div>
+              </div>
+              <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+              <p class="content">
+                子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+              </p>
+              <a href="#" class="more">もっと見る</a>
+            </div>
+            <div class="item">
+              <img
+                class="thumbnail"
+                src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                alt=""
+              />
+              <p class="title">講義プログラム名</p>
+              <button class="category">まちづくり・スマートシティ・防災</button>
+              <div class="info-container">
+                <div class="info-item">
+                  <i class="fas fa-clock icon"></i>
+                  <span style="font-size: 12px">3 時間</span>
+                </div>
+                <div class="info-item">
+                  <i class="fas fa-tv icon"></i>
+                  <span style="font-size: 12px">8 レ講義</span>
+                </div>
+              </div>
+              <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+              <p class="content">
+                子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+              </p>
+              <a href="#" class="more">もっと見る</a>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <!-- Footer -->
