Update css course popular

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             class="d-flex flex-row justify-content-between popular-course-title"
           >
             <h2>JeLSの人気講座</h2>
-            <div class="d-flex flex-row gap-3">
+            <div class="d-none d-md-flex flex-row gap-3">
               <button class="button left">&#8592;</button>
               <button class="button right">&#8594;</button>
             </div>
