Update course list

--- a/index.html
+++ b/index.html
@@ -325,6 +325,17 @@
               </p>
               <a href="#" class="more">もっと見る</a>
             </div>
+            <div
+              class="item d-none d-md-flex flex-row gap-3 justify-content-center align-items-center"
+            >
+              <a href="#" style="color: #1a2d44; font-size: 14px">View more</a>
+              <button
+                class="button left"
+                style="color: #1a2d44; border: 1px solid #1a2d44"
+              >
+                &#8594;
+              </button>
+            </div>
           </div>
         </div>
       </main>
