--- a/index.html
+++ b/index.html
@@ -517,6 +517,140 @@
             </div>
           </div>
         </div>
+
+        <div class="position-relative pricing-container">
+          <div
+            class="position-absolute top-0 w-100 h-100"
+            style="background-color: #f5f5f5"
+          ></div>
+          <div
+            class="position-absolute bottom-0 w-100"
+            style="background-color: white; height: 170px"
+          ></div>
+          <div class="position-relative">
+            <div
+              class="py-5 pb-md-4 mx-auto text-center pricing-title"
+              style="margin-top: 50px"
+            >
+              <p class="fs-6 fw-bold">
+                弊社は著作権者からの委託を受け、書籍・雑誌の複製利用の諾否および複製使用料の回収業務を｜一般社団法人出版者著作権管理機構（JCOPY）」に再委託しております。
+              </p>
+              <p class="fs-6 fw-bold">
+                弊社書籍・雑誌を複製利用される際は、JCOPYにご連絡いただき、所定の手続きを行ってくださいますようお願いいたします弊社は著作権者からの委託を受け、書籍・雑誌の複製利用の諾否および複製使用料の回収業務を「一般社団法人出版者著作権管理機構（ICOPY）」に再委託しております。
+              </p>
+            </div>
+            <div class="d-flex pt-0 pt-md-5 px-3 pricing-options">
+              <div style="margin: auto; display: flex" class="gap-4">
+                <div class="mb-4 rounded-5 shadow-sm pricing-box">
+                  <div
+                    class="py-3 text-center"
+                    style="background-color: #363946"
+                  >
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      10単位受講プラン
+                    </p>
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      (10講座)
+                    </p>
+                  </div>
+                  <div class="px-3 py-4 bg-white">
+                    <h2 style="color: #107cc6">8,000円</h2>
+                    <div class="d-flex flex-row mb-3">
+                      <p class="fs-6" style="margin: 0; color: #363946">
+                        受講期間：
+                      </p>
+                      <p class="fs-6 text-warning" style="margin: 0">1年間</p>
+                    </div>
+                    <p class="pb-5 wrap-text" style="margin: 0; color: #363946">
+                      弊社許諾にあたり、別途「著作権者（執筆者）の許諾取得」が条件となる場合がございます。申請時，
+                    </p>
+                    <a href="#" style="color: #363946"> 今すぐ申込む </a>
+                  </div>
+                </div>
+                <div
+                  class="mb-4 rounded-5 shadow-sm pricing-box border border-2 border-warning"
+                >
+                  <div class="py-3 text-center bg-warning">
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      20単位受講プラン
+                    </p>
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      (20講座)
+                    </p>
+                  </div>
+                  <div class="px-3 py-4 bg-white">
+                    <h2 class="text-warning">12,000円</h2>
+                    <div class="d-flex flex-row mb-3">
+                      <p class="fs-6" style="margin: 0; color: #363946">
+                        受講期間：
+                      </p>
+                      <p class="fs-6 text-warning" style="margin: 0">1年間</p>
+                    </div>
+                    <p class="pb-5 wrap-text" style="margin: 0; color: #363946">
+                      弊社許諾にあたり、別途「著作権者（執筆者）の許諾取得」が条件となる場合がございます。申請時，
+                    </p>
+                    <div class="d-flex flex-row gap-3 text-warning">
+                      <a href="#" class="text-warning"> 今すぐ申込む </a>
+                      <div>→</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="mb-4 rounded-5 shadow-sm pricing-box">
+                  <div
+                    class="py-3 text-center"
+                    style="background-color: #363946"
+                  >
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      40単位受講プラン
+                    </p>
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      (40講座)
+                    </p>
+                  </div>
+                  <div class="px-3 py-4 bg-white">
+                    <h2 style="color: #107cc6">16,000円</h2>
+                    <div class="d-flex flex-row mb-3">
+                      <p class="fs-6" style="margin: 0; color: #363946">
+                        受講期間：
+                      </p>
+                      <p class="fs-6 text-warning" style="margin: 0">1年間</p>
+                    </div>
+                    <p class="pb-5 wrap-text" style="margin: 0; color: #363946">
+                      弊社許諾にあたり、別途「著作権者（執筆者）の許諾取得」が条件となる場合がございます。申請時，
+                    </p>
+                    <a href="#" style="color: #363946"> 今すぐ申込む </a>
+                  </div>
+                </div>
+                <div class="mb-4 rounded-5 shadow-sm pricing-box">
+                  <div
+                    class="py-3 text-center"
+                    style="background-color: #363946"
+                  >
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      1単位受講
+                    </p>
+                    <p class="my-0 fw-bold text-white" style="margin: 0">
+                      (1講座)
+                    </p>
+                  </div>
+                  <div class="px-3 py-4 bg-white">
+                    <h2 style="color: #107cc6">1,500円</h2>
+                    <div class="d-flex flex-row mb-3">
+                      <p class="fs-6" style="margin: 0; color: #363946">
+                        受講期間：
+                      </p>
+                      <p class="fs-6 text-warning" style="margin: 0">1年間</p>
+                    </div>
+                    <p class="pb-5 wrap-text" style="margin: 0; color: #363946">
+                      弊社許諾にあたり、別途「著作権者（執筆者）の許諾取得」が条件となる場合がございます。申請時，
+                    </p>
+                    <a href="#" style="color: #363946"> 今すぐ申込む </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <!-- Footer -->
