--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
                 href="#"
                 ><u>STUDY LINK</u></a
               >
-              <button class="nav-hidden-button">
+              <button id="nav-hidden-button" style="padding: 0.375rem 0.75rem">
                 <span class="navbar-toggler-icon"></span>
               </button>
+              <div
+                class="avatar-circle d-lg-none"
+                style="width: 40px; height: 40px; margin: 0.375rem 0.75rem"
+                id="loggedInNotification"
+              >
+                <span class="fa">&#xf0f3;</span>
+              </div>
             </div>
             <div
               class="offcanvas-lg offcanvas-start nav-right-menu"
